--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,72 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Sail';
+    src: url('https://fonts.googleapis.com/css2?family=Sail&display=swap');
+  }
+  
+  @font-face {
+    font-family: 'Montserrat';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
+  }
+  
+  @font-face {
+    font-family: 'Merriweather';
+    src: url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+  }
+  
+  html, body {
+      border: 0;
+      font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+  }
+  
+  div, span, object, iframe, img, table, caption, thead, tbody,
+  tfoot, tr, tr, td, article, aside, canvas, details, figure, hgroup, menu,
+  nav, footer, header, section, summary, mark, audio, video {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code,
+  del, dfn, em, ins, q, samp, small, strong, sub, sup, b, i, hr, dl, dt, dd,
+  ol, ul, li, fieldset, legend, label {
+    border: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+  }
+  
+  article, aside, canvas, figure, figure img, figcaption, hgroup,
+  footer, header, nav, section, audio, video {
+      display: block;
+  }
+  
+  table {
+    border-collapse: separate;
+    border-spacing: 0;
+    caption, th, td {
+      text-align: left;
+      vertical-align: middle;
+    }
+  }
+  
+  a img {
+    border: 0;
+  }
+  
+  :focus {
+    outline: 0;
+  }
+  html, body { height: 100%; }
+  body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
