--- a/src/app/meal/meal-table/meal-table.component.less
+++ b/src/app/meal/meal-table/meal-table.component.less
@@ -1,59 +1,16 @@
-.column {
+@breakPoint: 728px;
+
+.container-meal{
     display: flex;
-    flex-direction: column;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-}
-
-.case {
-    height: 100px;
-    padding: 10px 5px 10px 5px;
-    border-right: black 0.5px solid;
-    border-bottom: black 0.5px solid;
-}
-
-thead {
-
-    background-color: #A47E3B;
-    color: white;
-
-    th {
-        text-align: center;
-        padding: 10px 0px;
-
-        &:first-child {
-            background-color: white;
-            color: white;
-
-        }
+    background-color: #61481C;
+    border-radius: 16px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+    width: 95%;
+    margin: 10px auto;
+    padding:  0 10px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media screen and (max-width: @breakPoint) {
+        flex-direction: column;
     }
-
-}
-
-.title_vertical {
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    text-align: center;
-    padding: 10px;
-    background-color: #A47E3B;
-    color: white;
-    height: 16px;
-}
-
-.border-radius-right {
-    border-top-right-radius: 16px;
-}
-
-.border-radius-left {
-    border-bottom-right-radius: 16px;
-}
-
-th {
-    font-family: Montserrat;
-    font-size: 20px;
-    font-weight: 600;
-
 }
