--- a/src/app/nav/nav.component.less
+++ b/src/app/nav/nav.component.less
@@ -1,4 +1,4 @@
-@menuBreakpoint: 400px;
+@menuBreakpoint: 728px;
 @menuHeight: 62px;
 
 
@@ -74,5 +74,8 @@
                 line-height: 40px;
             }
         }
+    }
+    .logout{
+        cursor: pointer;
     }
 }
