--- a/src/app/meal/meal-day/meal-day.component.less
+++ b/src/app/meal/meal-day/meal-day.component.less
@@ -1,35 +1,26 @@
-.card-recipe {
-    position: relative;
-    min-height: 100px;
-    overflow: hidden;
-    margin-bottom: 5px;
-    z-index: 1;
-    width: 150px;
 
-    .img {
-        position: absolute;
-        background-position: 50% 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 150px;
+@breakpoint : 768px;
+.container-day{
+    background-color: white;
+    border-radius: 16px;
+    min-width: 150px;
+    padding-bottom: 10px;
+    margin: 10px;
+    @media screen and (max-width: @breakpoint) {
+        margin: 10px 0;
     }
-
-    .title {
-        position: absolute;
-        font-size: 11px;
-        line-height: 21px;
-        color: #fff;
-        background-color: rgba(230, 179, 37, 0.75);
-        bottom: 0;
-        padding: 2px;
-        z-index: 9;
-        width: 100%;
-        max-height: 90px;
-        overflow: hidden;
-        font-family: 'Montserrat' , sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 11px;
+    h2{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 600;
+        background-color: #A47E3B;
+        border-radius: 16px 16px 0px 0px;
+        color: white;
+        padding: 10px;
+        @media screen and (max-width: @breakpoint) {
+            font-size: 30px;
+        }
+    }::first-letter{
+        text-transform: uppercase;
     }
 }
