--- a/src/app/menu-recipes/menu-recipes.component.less
+++ b/src/app/menu-recipes/menu-recipes.component.less
@@ -180,5 +180,8 @@
         border-radius: 100%;
         width: 50px;
         height: 50px;
+        background-color: #61481C;
+        border: none;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
     }
 }
